work with spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+spring.jpa.show-sql=true
